--- a/css/styles.css
+++ b/css/styles.css
@@ -358,27 +358,39 @@ a.article:hover {
     content: "\e114";
   }
 
-.legend {
-    line-height: 18px;
-    color: #555;
-}
-.legend i {
-    width: 18px;
-    height: 18px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.7;
+.info {
+padding: 6px 8px;
+font: 14px/16px Arial, Helvetica, sans-serif;
+background: white;
+background: rgba(255,255,255,0.8);
+box-shadow: 0 0 15px rgba(0,0,0,0.2);
+border-radius: 5px;
 }
 
-.info {
-    padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255,255,255,0.8);
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
+.legend {
+background-color: “black”;
+line-height: 25px;
+color: #555;
+width: auto;
 }
+
+.legend i {
+width: 18px;
+height: 18px;
+float: left;
+margin-right: 8px;
+opacity: 0.7;
+}
+
 .info h4 {
     margin: 0 0 5px;
     color: #777;
 }
+
+#map { width: 550px; height: 500px; }
+
+.button {
+  font-size: 10px;
+}
+
+
