--- a/css/styles.css
+++ b/css/styles.css
@@ -235,6 +235,7 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
+    min-height: 100vh;
     background: #00BCD4;
     color: #fff;
     transition: all 0.3s;
@@ -387,10 +388,13 @@ opacity: 0.7;
     color: #777;
 }
 
-#map { width: 550px; height: 500px; }
+#map { width: 100%; height: 600px; }
 
 .button {
   font-size: 10px;
 }
 
+.bg {
+  font-size: 12px;
+}
 
